--- a/blog/preamble.tex
+++ b/blog/preamble.tex
@@ -72,3 +72,7 @@
 \renewcommand{\th}{\textsuperscript{th}}
 \renewcommand{\vec}[1]{\mathbf{\boldsymbol{#1}}}
 \DeclareMathOperator*{\argmin}{\arg\,\min\,\,}
+\newcommand{\calX}{\mathcal{X}}
+\newcommand{\calY}{\mathcal{Y}}
+\DeclareMathOperator{\Prob}{Prob}
+
