--- a/blog/2025-06-05_notation.tex
+++ b/blog/2025-06-05_notation.tex
@@ -9,14 +9,14 @@
 
 \maketitle
 
-Let $\calX \times \calY$ be the data space split along an input-label line. The hypothesis class is a collection of functions $f \in \mathcal{F}$
+Let $\calX \times \calY$ be the data space split along an input-label axis. The hypothesis class is a collection of functions $f \in \mathcal{F}$
 \[
 	f : \calX \times \Theta \to \calY.
 \]
 For example, the hypothesis class could be a neural network with $P$ weights (and biases), then $\Theta = \R^P$ and $f(\vec{x}, \vec{\theta})$ would be the function defined by the network.
 
 A \emph{solution} to the supervised learning problem could be a $\vec{\theta}^*$ (a set of parameters) such that $$f(\vec{x}_i, \vec{\theta}^*) \approx y_i$$
-for all given (training) data points $\{(\vec{x}_i, y_i)\}_{i = 1}^N \subseteq \calX \times \calY$. The whole enterprise on the assumption that $f$ also predicts the label for yet unseen data; i.e. $f(\vec{x}_{\text{new}}, \vec{\theta}^*) \approx y_{\text{new}}$ for yet unseen data $(\vec{x}_{\text{new}}, y_{\text{new}})$ assumed to come from the same distribution as the training data in $\calX \times \calY$. Whether this is possible heavily depends on the hypothesis class $\mathcal{F}$. Those functions describable by a neural network and easily discoverable by the common gradient based algorithms have proven to work well for distributions of data we have collected and thrown at these machine learning models.
+for all given (training) data points $\{(\vec{x}_i, y_i)\}_{i = 1}^N \subseteq \calX \times \calY$. The whole of machine learning enterprise rests on the assumption, or rather observation that $f$ also predicts the label for yet unseen data; i.e. $f(\vec{x}_{\text{new}}, \vec{\theta}^*) \approx y_{\text{new}}$ for yet unseen data $(\vec{x}_{\text{new}}, y_{\text{new}})$ assumed to come from the same distribution as the training data in $\calX \times \calY$. Whether this is possible heavily depends on the hypothesis class $\mathcal{F}$. Those functions describable by a neural network and easily discoverable by the common gradient based algorithms have proven to work well for distributions of data we have collected and thrown at these machine learning models.
 
 Finding this $\vec \theta^*$ is typically achieved by a variant of gradient descent on the loss function defined of the form
 \begin{equation}\label{eq:lossfn}
@@ -37,7 +37,7 @@ where $R :\Theta \to \R_{\geq 0 }$ is is called the regularizer, responsible for
 or a partial retraction function $r_{\vec{\theta}}: U \to \Theta$ for a neighborhood $\vec{0} \in U \subseteq T_{\vec{\theta}}\Theta$. The raison d'\^{e}tre such a retraction is to be able to move on $\Theta$ starting from $\vec{\theta}$, in the direction of $\vec{v}\in T_\vec{\theta} \Theta$ and we update the values of the parameters by $\vec\theta^{\text{updated}} := r_\vec{\theta}(- \alpha \nabla \ell(\vec{\theta}))$, valid for small enough step size $\alpha>0$ in partial retractions. For $\Theta$ an open domain in a flat affine space, $r_{\vec{\theta}} (\vec{v}) = \vec{v} + \vec{\theta}$ does the job, and gives us the gradient descent for $\vec{v} = -\alpha \nabla\ell(\vec{\theta})$.
 \item The data space $\calX$ does not technically need any structure more than a set, however in most circumstances it will be a differentiable manifold---in fact simply $\calX = \R^{\text{in}}$---and in the case of neural networks, $f(\vec{x}, \vec{\theta})$ is a differentiable function of $\vec{x}$, using which we can compute saliency of features.
 \item In case of $\Theta = \R^P$, we have $T_\vec{\theta} \Theta \cong \R^P$ for all points $\vec{\theta}$ on the manifold, and in fact they can be all canonically identified with one another. That is why we can assume all the gradients $\nabla \ell(\vec{\theta})$ are living in the same vector space, and why it is meaningful to accumulate gradients from past steps such as in momentum.
-\item If furthermore the the tangent spaces $T_{\vec{\theta}}$ have distinguished bases---for example the directions aligned with weights is distinguished from the point of view of the model architecture---then fixing such a basis one can also use componentwise operations on the gradient vectors such as the squaring, division, taking squareroots etc.\ used in Adam.
+\item If furthermore the the tangent spaces $T_{\vec{\theta}}\Theta$ have distinguished bases---for example the directions aligned with weights is distinguished from the point of view of the model architecture---then fixing such a basis one can also use componentwise operations on the gradient vectors such as the squaring, division, taking squareroots etc.\ used in Adam.
 \end{itemize}
 
 
