added the blog link and updated CV_link

--- a/blog/2025-06-05_notation.tex
+++ b/blog/2025-06-05_notation.tex
@@ -2,7 +2,7 @@
 \input{./preamble}
 
 
-\title{Some Notation}
+\title{Setting the stage: objects and notation}
 \author{emk}
 \date{2025/06/05}
 \begin{document}
