still tinkering with the website

--- a/blog/preamble.tex
+++ b/blog/preamble.tex
@@ -1,10 +1,15 @@
 %PACKAGES
+\usepackage{svg}
+\usepackage{shellesc}
 
 \usepackage{amsmath, amssymb, amsfonts, amsthm}
 
 \usepackage{mathrsfs}
 \usepackage{cancel}
 \usepackage{graphicx}
+\usepackage{wrapfig}
+\usepackage{caption}
+
 
 %ENVIRONMENTS
 \newtheorem{remark}{Remark}%[section]
@@ -42,7 +47,6 @@
 
 
 %FLAG COLORS
-\usepackage[usenames,dvipsnames]{xcolor}
 \newcommand{\red}{\textcolor{red}}
 \newcommand{\blue}{\textcolor{blue}}
 \newcommand{\green}{\textcolor{PineGreen}}
