--- a/blog/preamble.tex
+++ b/blog/preamble.tex
@@ -9,7 +9,7 @@
 \usepackage{graphicx}
 \usepackage{wrapfig}
 \usepackage{caption}
-
+\usepackage{hyperref}
 
 %ENVIRONMENTS
 \newtheorem{remark}{Remark}%[section]
