new post on bayesian objective and links are red now

--- a/blog/preamble.tex
+++ b/blog/preamble.tex
@@ -62,6 +62,7 @@
 \newtheorem{proposition}[theorem]{Proposition}
 \newtheorem{rmk}[theorem]{Remark}
 \newtheorem{definition}{Definition}
+\newtheorem*{exercise}{Exercise}
 
 %Miscellaneous
 \newcommand{\vtheta}{\boldsymbol{\theta}}
