tikz commutative diagrams added

--- a/blog/preamble.tex
+++ b/blog/preamble.tex
@@ -10,6 +10,7 @@
 \usepackage{wrapfig}
 \usepackage{caption}
 \usepackage{hyperref}
+\usepackage{tikz-cd}
 
 %ENVIRONMENTS
 \newtheorem{remark}{Remark}%[section]
